debug indecs and indirect

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -8,7 +8,7 @@
 
 	<Lens>30</Lens>
 	
-	<MegdrDefault>4</MegdrDefault>
+	<MegdrDefault>7</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
 		<TopographyFile>E:\Mars\MEGDR\004\MEGT90N000CB.IMG</TopographyFile>
@@ -16,7 +16,7 @@
 		<Lines>720</Lines>
 		<LineSamples>1440</LineSamples>
 	</Megdr>
-	<Megdr id="2">
+	<!--<Megdr id="2">
 		<RadiusFile>E:\Mars\MEGDR\016\MEGR90N000EB.IMG</RadiusFile>
 		<TopographyFile>E:\Mars\MEGDR\016\MEGT90N000EB.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
@@ -32,34 +32,62 @@
 	</Megdr>
 	<Megdr id="4">
 		<Count>4</Count>
-		<RadiusFile sample="1" line="1"		>E:\Mars\MEGDR\Test\megr11.IMG</RadiusFile>
-		<TopographyFile sample="1" line="1"	>E:\Mars\MEGDR\Test\megt11.IMG</TopographyFile>
-		<RadiusFile sample="2" line="1"		>E:\Mars\MEGDR\Test\megr21.IMG</RadiusFile>
-		<TopographyFile sample="2" line="1"	>E:\Mars\MEGDR\Test\megt21.IMG</TopographyFile>
-		<RadiusFile sample="1" line="2"		>E:\Mars\MEGDR\Test\megr12.IMG</RadiusFile>
-		<TopographyFile sample="1" line="2"	>E:\Mars\MEGDR\Test\megt12.IMG</TopographyFile>
-		<RadiusFile sample="2" line="2"		>E:\Mars\MEGDR\Test\megr22.IMG</RadiusFile>
-		<TopographyFile sample="2" line="2"	>E:\Mars\MEGDR\Test\megt22.IMG</TopographyFile>
+		<RadiusFile line="1" sample="1"		>E:\Mars\MEGDR\Test\megr11.IMG</RadiusFile>
+		<TopographyFile line="1" sample="1"	>E:\Mars\MEGDR\Test\megt11.IMG</TopographyFile>
+		<RadiusFile line="2" sample="1"		>E:\Mars\MEGDR\Test\megr21.IMG</RadiusFile>
+		<TopographyFile line="2" sample="1"	>E:\Mars\MEGDR\Test\megt21.IMG</TopographyFile>
+		<RadiusFile line="1" sample="2"		>E:\Mars\MEGDR\Test\megr12.IMG</RadiusFile>
+		<TopographyFile line="1" sample="2"	>E:\Mars\MEGDR\Test\megt12.IMG</TopographyFile>
+		<RadiusFile line="2" sample="2"		>E:\Mars\MEGDR\Test\megr22.IMG</RadiusFile>
+		<TopographyFile line="2" sample="2"	>E:\Mars\MEGDR\Test\megt22.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>720</Lines>
 		<LineSamples>1440</LineSamples>
-	</Megdr>
-	<Megdr id="5">
+	</Megdr>-->
+	<!--<Megdr id="5">
 		<Count>4</Count>
-		<RadiusFile sample="1" line="1"		>E:\Mars\MEGDR\064\megr00n000gb.IMG</RadiusFile>
-		<TopographyFile sample="1" line="1"	>E:\Mars\MEGDR\064\megt00n000gb.IMG</TopographyFile>
-		<RadiusFile sample="2" line="1"		>E:\Mars\MEGDR\064\megr00n180gb.IMG</RadiusFile>
-		<TopographyFile sample="2" line="1"	>E:\Mars\MEGDR\064\megt00n180gb.IMG</TopographyFile>
-		<RadiusFile sample="1" line="2"		>E:\Mars\MEGDR\064\megr90n000gb.IMG</RadiusFile>
-		<TopographyFile sample="1" line="2"	>E:\Mars\MEGDR\064\megt90n000gb.IMG</TopographyFile>
-		<RadiusFile sample="2" line="2"		>E:\Mars\MEGDR\064\megr90n180gb.IMG</RadiusFile>
-		<TopographyFile sample="2" line="2"	>E:\Mars\MEGDR\064\megt90n180gb.IMG</TopographyFile>
+		<RadiusFile line="1" sample="1"		>E:\Mars\MEGDR\064\megr00n000gb.IMG</RadiusFile>
+		<TopographyFile line="1" sample="1"	>E:\Mars\MEGDR\064\megt00n000gb.IMG</TopographyFile>
+		<RadiusFile line="1" sample="2"		>E:\Mars\MEGDR\064\megr00n180gb.IMG</RadiusFile>
+		<TopographyFile line="1" sample="2"	>E:\Mars\MEGDR\064\megt00n180gb.IMG</TopographyFile>
+		<RadiusFile line="2" sample="1"		>E:\Mars\MEGDR\064\megr90n000gb.IMG</RadiusFile>
+		<TopographyFile line="2" sample="1"	>E:\Mars\MEGDR\064\megt90n000gb.IMG</TopographyFile>
+		<RadiusFile line="2" sample="2"		>E:\Mars\MEGDR\064\megr90n180gb.IMG</RadiusFile>
+		<TopographyFile line="2" sample="2"	>E:\Mars\MEGDR\064\megt90n180gb.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>5760</Lines>
 		<LineSamples>11520</LineSamples>
+	</Megdr>-->
+	<Megdr id="6">
+		<Count>4</Count>
+		<RadiusFile line="1" sample="1"		>E:\Mars\MEGDR\Simulate\megdr_r_0.IMG</RadiusFile>
+		<TopographyFile line="1" sample="1"	>E:\Mars\MEGDR\Simulate\megdr_t_0.IMG</TopographyFile>
+		<RadiusFile line="1" sample="2"		>E:\Mars\MEGDR\Simulate\megdr_r_1.IMG</RadiusFile>
+		<TopographyFile line="1" sample="2"	>E:\Mars\MEGDR\Simulate\megdr_t_1.IMG</TopographyFile>
+		<RadiusFile line="2" sample="1"		>E:\Mars\MEGDR\Simulate\megdr_r_2.IMG</RadiusFile>
+		<TopographyFile line="2" sample="1"	>E:\Mars\MEGDR\Simulate\megdr_t_2.IMG</TopographyFile>
+		<RadiusFile line="2" sample="2"		>E:\Mars\MEGDR\Simulate\megdr_r_3.IMG</RadiusFile>
+		<TopographyFile line="2" sample="2"	>E:\Mars\MEGDR\Simulate\megdr_t_3.IMG</TopographyFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>360</Lines>
+		<LineSamples>720</LineSamples>
+	</Megdr>
+	<Megdr id="7">
+		<Count>4</Count>
+		<RadiusFile line="1" sample="1"		>E:\Mars\MEGDR\Simulate\sim_r_0.IMG</RadiusFile>
+		<TopographyFile line="1" sample="1"	>E:\Mars\MEGDR\Simulate\sim_t_0.IMG</TopographyFile>
+		<RadiusFile line="1" sample="2"		>E:\Mars\MEGDR\Simulate\sim_r_1.IMG</RadiusFile>
+		<TopographyFile line="1" sample="2"	>E:\Mars\MEGDR\Simulate\sim_t_1.IMG</TopographyFile>
+		<RadiusFile line="2" sample="1"		>E:\Mars\MEGDR\Simulate\sim_r_2.IMG</RadiusFile>
+		<TopographyFile line="2" sample="1"	>E:\Mars\MEGDR\Simulate\sim_t_2.IMG</TopographyFile>
+		<RadiusFile line="2" sample="2"		>E:\Mars\MEGDR\Simulate\sim_r_3.IMG</RadiusFile>
+		<TopographyFile line="2" sample="2"	>E:\Mars\MEGDR\Simulate\sim_t_3.IMG</TopographyFile>
+		<BaseHeight>3396000</BaseHeight>
+		<Lines>90</Lines>
+		<LineSamples>180</LineSamples>
 	</Megdr>
 
-	<PaletteDefault>4</PaletteDefault>
+	<PaletteDefault>5</PaletteDefault>
 	<Palette id="1" interpolate="1024">
 		<Color Height="-25000">0x000000</Color>
 		<Color Height="-1000">0x00AA00</Color>
@@ -122,5 +150,11 @@
 		<Color Height="  6000">0xab1313</Color>
 		<Color Height=" 18000">0xFFFFFF</Color>
 		<Color Height=" 21180">0xFFFFFF</Color>
+	</Palette>
+	<Palette id="5" interpolate="4">
+		<Color Height=" 0">0x000000</Color>
+		<Color Height=" 5">0x00FF00</Color>
+		<Color Height="10">0x0000FF</Color>
+		<Color Height="15">0xFF0000</Color>
 	</Palette>
 </MarsPlay>
