ZOOM in / ZOOM out Code review

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -6,9 +6,9 @@
 		<Release clear="0">On</Release>
 	</Logger>
 
-	<Lens>30</Lens>
+	<ViewAngle>20</ViewAngle>
 	
-	<MegdrDefault>6</MegdrDefault>
+	<MegdrDefault>1</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
 		<TopographyFile>E:\Mars\MEGDR\004\MEGT90N000CB.IMG</TopographyFile>
@@ -45,21 +45,21 @@
 		<LineSamples>11520</LineSamples>
 	</Megdr>
 
-	<PaletteDefault>4</PaletteDefault>
+	<PaletteDefault>3</PaletteDefault>
 	<Palette id="1" interpolate="1024">
 		<Color Height="-25000">0x000000</Color>
-		<Color Height="-1000">0x00AA00</Color>
-		<Color Height="    0">0x0000FF</Color>
-		<Color Height="21180">0xFF0000</Color>
+		<Color Height=" -1000">0x00AA00</Color>
+		<Color Height="     0">0x0000FF</Color>
+		<Color Height=" 21180">0xFF0000</Color>
 	</Palette>
 	<Palette id="2" interpolate="128">
 		<Color Height="-32565">0x202020</Color>
 		<Color Height="-20000">0x0f1d08</Color>
-		<Color Height=" -6000">0x041d08</Color>
+		<Color Height=" -6000">0x0f1d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
-		<Color Height=" -4000">0x094d4b</Color>
-		<Color Height=" -3000">0x20687a</Color>
-		<Color Height="  -700">0x186291</Color>
+		<Color Height=" -4000">0x18087a</Color>
+		<Color Height=" -3000">0x094d4b</Color>
+		<Color Height="  -700">0x076241</Color>
 		<Color Height="  -500">0x165082</Color>
 		<Color Height="     0">0x0089fe</Color>
 		<Color Height="   100">0x616a19</Color>
@@ -71,33 +71,14 @@
 		<Color Height=" 18000">0xFFFFFF</Color>
 		<Color Height=" 21180">0xFFFFFF</Color>
 	</Palette>
-	<Palette id="3" interpolate="512">
+	<Palette id="3" interpolate="4096">
 		<Color Height="-32565">0x202020</Color>
 		<Color Height="-20000">0x0f1d08</Color>
-		<Color Height=" -6000">0x041d08</Color>
+		<Color Height=" -6000">0x0f1d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
-		<Color Height=" -4000">0x094d4b</Color>
-		<Color Height=" -3000">0x20687a</Color>
-		<Color Height="  -700">0x186291</Color>
-		<Color Height="  -500">0x165082</Color>
-		<Color Height="     0">0x0089fe</Color>
-		<Color Height="   100">0x616a19</Color>
-		<Color Height="   500">0x6a5819</Color>
-		<Color Height="  1000">0xa56d2b</Color>
-		<Color Height="  3000">0xa5512b</Color>
-		<Color Height="  5000">0xab1313</Color>
-		<Color Height="  6000">0xab1313</Color>
-		<Color Height=" 18000">0xFFFFFF</Color>
-		<Color Height=" 21180">0xFFFFFF</Color>
-	</Palette>
-	<Palette id="4" interpolate="4096">
-		<Color Height="-32565">0x202020</Color>
-		<Color Height="-20000">0x0f1d08</Color>
-		<Color Height=" -6000">0x041d08</Color>
-		<Color Height=" -5900">0x0d2d0a</Color>
-		<Color Height=" -4000">0x094d4b</Color>
-		<Color Height=" -3000">0x20687a</Color>
-		<Color Height="  -700">0x186291</Color>
+		<Color Height=" -4000">0x18087a</Color>
+		<Color Height=" -3000">0x094d4b</Color>
+		<Color Height="  -700">0x076241</Color>
 		<Color Height="  -500">0x165082</Color>
 		<Color Height="     0">0x0089fe</Color>
 		<Color Height="   100">0x616a19</Color>
