--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -45,16 +45,19 @@
 		<LineSamples>11520</LineSamples>
 	</Megdr>
 
-	<PaletteDefault>3</PaletteDefault>
+	<PaletteDefault>0</PaletteDefault>
+	<Palette id="0" interpolate="1024">
+		<Color Height=" -8199">0x000000</Color>
+		<Color Height=" 21180">0xFFFFFF</Color>
+	</Palette>
 	<Palette id="1" interpolate="1024">
-		<Color Height="-25000">0x000000</Color>
+		<Color Height=" -8199">0x000000</Color>
 		<Color Height=" -1000">0x00AA00</Color>
 		<Color Height="     0">0x0000FF</Color>
-		<Color Height=" 21180">0xFF0000</Color>
+		<Color Height=" 21218">0xFF0000</Color>
 	</Palette>
 	<Palette id="2" interpolate="128">
-		<Color Height="-32565">0x202020</Color>
-		<Color Height="-20000">0x0f1d08</Color>
+		<Color Height=" -8199">0x000000</Color>
 		<Color Height=" -6000">0x0f1d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
 		<Color Height=" -4000">0x18087a</Color>
@@ -69,11 +72,10 @@
 		<Color Height="  5000">0xab1313</Color>
 		<Color Height="  6000">0xab1313</Color>
 		<Color Height=" 18000">0xFFFFFF</Color>
-		<Color Height=" 21180">0xFFFFFF</Color>
+		<Color Height=" 21218">0xFFFFFF</Color>
 	</Palette>
 	<Palette id="3" interpolate="4096">
-		<Color Height="-32565">0x202020</Color>
-		<Color Height="-20000">0x0f1d08</Color>
+		<Color Height=" -8199">0x000000</Color>
 		<Color Height=" -6000">0x0f1d08</Color>
 		<Color Height=" -5900">0x0d2d0a</Color>
 		<Color Height=" -4000">0x18087a</Color>
@@ -88,6 +90,6 @@
 		<Color Height="  5000">0xab1313</Color>
 		<Color Height="  6000">0xab1313</Color>
 		<Color Height=" 18000">0xFFFFFF</Color>
-		<Color Height=" 21180">0xFFFFFF</Color>
+		<Color Height=" 21218">0xFFFFFF</Color>
 	</Palette>
 </MarsPlay>
