--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -7,7 +7,9 @@
 	</Logger>
 
 	<ViewAngle>20</ViewAngle>
-	
+
+	<Albedo>Albedo.png</Albedo>
+
 	<MegdrDefault>1</MegdrDefault>
 	<Megdr id="1">
 		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
