--- a/MarsPlay.vcxproj
+++ b/MarsPlay.vcxproj
@@ -231,6 +231,9 @@
   <ItemGroup>
     <ResourceCompile Include="Shader.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
