--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -10,36 +10,36 @@
 
 	<MegdrDefault>1</MegdrDefault>
 	<Megdr id="1">
-		<RadiusFile>E:\Mars\MEGDR\004\MEGR90N000CB.IMG</RadiusFile>
-		<TopographyFile>E:\Mars\MEGDR\004\MEGT90N000CB.IMG</TopographyFile>
+		<RadiusFile>.\004\MEGR90N000CB.IMG</RadiusFile>
+		<TopographyFile>.\004\MEGT90N000CB.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>720</Lines>
 		<LineSamples>1440</LineSamples>
 	</Megdr>
 	<Megdr id="2">
-		<RadiusFile>E:\Mars\MEGDR\016\MEGR90N000EB.IMG</RadiusFile>
-		<TopographyFile>E:\Mars\MEGDR\016\MEGT90N000EB.IMG</TopographyFile>
+		<RadiusFile>.\016\MEGR90N000EB.IMG</RadiusFile>
+		<TopographyFile>.\016\MEGT90N000EB.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>2880</Lines>
 		<LineSamples>5760</LineSamples>
 	</Megdr>
 	<Megdr id="3">
-		<RadiusFile>E:\Mars\MEGDR\032\megr90n000fb.IMG</RadiusFile>
-		<TopographyFile>E:\Mars\MEGDR\032\megt90n000fb.IMG</TopographyFile>
+		<RadiusFile>.\032\megr90n000fb.IMG</RadiusFile>
+		<TopographyFile>.\032\megt90n000fb.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>5760</Lines>
 		<LineSamples>11520</LineSamples>
 	</Megdr>
 	<Megdr id="4">
 		<Count>4</Count>
-		<RadiusFile line="1" sample="1"		>E:\Mars\MEGDR\064\megr90n000gb.IMG</RadiusFile>
-		<TopographyFile line="1" sample="1"	>E:\Mars\MEGDR\064\megt90n000gb.IMG</TopographyFile>
-		<RadiusFile line="1" sample="2"		>E:\Mars\MEGDR\064\megr90n180gb.IMG</RadiusFile>
-		<TopographyFile line="1" sample="2"	>E:\Mars\MEGDR\064\megt90n180gb.IMG</TopographyFile>
-		<RadiusFile line="2" sample="1"		>E:\Mars\MEGDR\064\megr00n000gb.IMG</RadiusFile>
-		<TopographyFile line="2" sample="1"	>E:\Mars\MEGDR\064\megt00n000gb.IMG</TopographyFile>
-		<RadiusFile line="2" sample="2"		>E:\Mars\MEGDR\064\megr00n180gb.IMG</RadiusFile>
-		<TopographyFile line="2" sample="2"	>E:\Mars\MEGDR\064\megt00n180gb.IMG</TopographyFile>
+		<RadiusFile line="1" sample="1"		>.\064\megr90n000gb.IMG</RadiusFile>
+		<TopographyFile line="1" sample="1"	>.\064\megt90n000gb.IMG</TopographyFile>
+		<RadiusFile line="1" sample="2"		>.\064\megr90n180gb.IMG</RadiusFile>
+		<TopographyFile line="1" sample="2"	>.\064\megt90n180gb.IMG</TopographyFile>
+		<RadiusFile line="2" sample="1"		>.\064\megr00n000gb.IMG</RadiusFile>
+		<TopographyFile line="2" sample="1"	>.\064\megt00n000gb.IMG</TopographyFile>
+		<RadiusFile line="2" sample="2"		>.\064\megr00n180gb.IMG</RadiusFile>
+		<TopographyFile line="2" sample="2"	>.\064\megt00n180gb.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>5760</Lines>
 		<LineSamples>11520</LineSamples>
