--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MarsPlay>
 	<Logger>
-		<LogFile>E:\!MarsPlay_log.txt</LogFile>
+		<LogFile>!MarsPlay_log.txt</LogFile>
 		<Debug clear="1">On</Debug>
 		<Release clear="0">On</Release>
 	</Logger>
