Add megd data Change config

--- a/MarsPlay.config
+++ b/MarsPlay.config
@@ -23,7 +23,7 @@
 		<Lines>2880</Lines>
 		<LineSamples>5760</LineSamples>
 	</Megdr>
-	<Megdr id="3">
+	<!--<Megdr id="3">
 		<RadiusFile>.\032\megr90n000fb.IMG</RadiusFile>
 		<TopographyFile>.\032\megt90n000fb.IMG</TopographyFile>
 		<BaseHeight>3396000</BaseHeight>
@@ -43,7 +43,7 @@
 		<BaseHeight>3396000</BaseHeight>
 		<Lines>5760</Lines>
 		<LineSamples>11520</LineSamples>
-	</Megdr>
+	</Megdr>-->
 
 	<PaletteDefault>3</PaletteDefault>
 	<Palette id="0" interpolate="1024">
